--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -25,7 +25,6 @@
 
 /* Number Hero */
 .wekb-numberChartHero {
-  margin-top: -21px;
   padding-top: 35px;
   padding-bottom: 35px;
   color: white;
@@ -41,10 +40,7 @@
   font-weight: 600;
   line-height: 1;
 }
-/* New grid for 5 columns */
-.ten-columns > .col-sm-2 {
-  width: 20%;
-}
+
 /* Arrow for multiple select2 boxes */
 ul.select2-choices {
   padding-right: 30px !important;
@@ -59,6 +55,12 @@ ul.select2-choices:after {
   border-top: 5px solid #333;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
+}
+.wekb-filter {
+  padding: 24px;
+  background-color: #fafafa;
+  border: 1px solid #e8e8e8;
+  border-radius: 0;
 }
 .wekb-filter .input-group-md > .form-control {
   height: 35px;
