--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -129,7 +129,19 @@ ul.select2-choices:after {
 @media (min-width: 768px) {
   .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-left:solid 1px rgba(255,255,255,0.10); }
 }
-
+/* TAB IN Bootstrap 4 */
+.tab-content {
+  border: 1px solid #ddd;
+  border-top: 0 none;
+  margin-bottom: 20px;
+  width: 100%;
+}
+.tab-pane {
+  padding: 20px;
+}
+.nav-tabs > li {
+  margin-bottom: -1px;
+}
 /** PUBLIC END **/
 .threeColGrid > div:nth-child(4n+5) {
     clear: left;
