--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -139,9 +139,15 @@ ul.select2-choices:after {
 .tab-pane {
   padding: 20px;
 }
-.nav-tabs > li {
-  margin-bottom: -1px;
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  color: #6f6f6f;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+  cursor: default;
 }
+
 /** PUBLIC END **/
 .threeColGrid > div:nth-child(4n+5) {
     clear: left;
