--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -20,7 +20,7 @@
 
 /* Logo */
 .navbar-brand.mekb-logo{
-  //padding: 3px 15px;
+  padding: 3px 15px;
 }
 
 /* Number Hero */
@@ -29,6 +29,7 @@
   padding-bottom: 35px;
   color: white;
   background-color: #a9ceda;
+  margin-top: -1rem!important;
 }
 .wekb-numberChartHero .mekb-title{
   font-size: 11px;
