Footer sticks on bottom if content is short

--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -18,6 +18,15 @@
 
 /** PUBLIC START **/
 
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+main {
+  flex:1;
+}
+
 /* Logo */
 .navbar-brand.mekb-logo{
   padding: 3px 15px;
