--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -17,45 +17,27 @@
 */
 
 /** PUBLIC START **/
-/* Mobile Tables */
-.table-responsive-stack tr {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-}
-
-
-.table-responsive-stack td,
-.table-responsive-stack th {
-  display:block;
-  /*
-     flex-grow | flex-shrink | flex-basis   */
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-}
+/* Mobile Tables START */
 
 .table-responsive-stack .table-responsive-stack-thead {
   font-weight: bold;
 }
 
 @media screen and (max-width: 768px) {
+  .table-responsive-stack td,
+  .table-responsive-stack th {
+    display:block;
+    flex: 1 1 auto;
+  }
   .table-responsive-stack tr {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     border-bottom: 3px solid #ccc;
     display:block;
-
   }
 }
+/* Mobile Tables END */
 
-
-/* important for accessibility */
+/* accessibility START*/
 a {
   color: #007da7;
 }
@@ -73,7 +55,7 @@ a {
 .table-striped tbody tr:nth-of-type(odd) {
   background-color: #FBFBFB;
 }
-
+/* accessibility END*/
 body {
   display: flex;
   min-height: 100vh;
