--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -46,7 +46,8 @@ a {
 }
 .nav-tabs .nav-link, .nav-tabs .nav-link.disabled, .nav-tabs .nav-link.disabled:focus, .nav-tabs .nav-link.disabled:hover {
   border-color: rgba(0,0,0,.1);
-  background-color: #FBFBFB;
+  background-color: #E2EAED;
+  color: black;
 }
 .btn-primary {
   background-color: #007da7;
