--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -41,8 +41,8 @@
 a {
   color: #007da7;
 }
-.badge-secondary {
-  background-color: #D09E78;
+.badge-info {
+  background-color: #2A5967;
 }
 .nav-tabs .nav-link, .nav-tabs .nav-link.disabled, .nav-tabs .nav-link.disabled:focus, .nav-tabs .nav-link.disabled:hover {
   border-color: rgba(0,0,0,.1);
