--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -198,6 +198,12 @@ ul.select2-choices:after {
 }
 
 /** PUBLIC END **/
+
+/* Bugfix ERMS-3385 */
+.dl-horizontal dd{
+  width: 50%;
+}
+
 .threeColGrid > div:nth-child(4n+5) {
     clear: left;
 }
