accessibility: role="form" is set implicit on form-Elements and therefore marked as mistake by accessibility test software

--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -198,6 +198,10 @@ ul.select2-choices:after {
 }
 
 /** PUBLIC END **/
+
+.select2-default {
+  color: #495057!important;
+}
 .threeColGrid > div:nth-child(4n+5) {
     clear: left;
 }
