--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -38,6 +38,10 @@
 /* Mobile Tables END */
 
 /* accessibility START*/
+#loginForm .alert {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
 a {
   color: #007da7;
 }
