--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -205,13 +205,13 @@ ul.select2-choices:after {
 /** PUBLIC END **/
 
 .wekb-local{
-  border-left: 10px solid #5bc0de;
+  border-left: 10px solid #5bc0de!important;
 }
 .wekb-dev{
-  border-left: 10px solid #5cb85c;
+  border-left: 10px solid #5cb85c!important;
 }
 .wekb-qa{
-  border-left: 10px solid #d9534f;
+  border-left: 10px solid #d9534f!important;
 }
 /* list group-item font is to small in yeti theme */
 .list-group {
