ERMS-4105: Ygor Statistik in der WEKB anzeigen bei automatischen Paketeinspielungen

--- a/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/gokb/application.css
@@ -389,3 +389,9 @@ body .modal-dialog {
   width:100px;
   display:inline;
 }
+
+
+.nav-tabs .badge {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
