ERMS-4349: New Order for the Fomantic Building Process

--- a/files/frontend/semantic/src/definitions/collections/breadcrumb.less
+++ b/files/frontend/semantic/src/definitions/collections/breadcrumb.less
@@ -15,7 +15,7 @@
 @type    : 'collection';
 @element : 'breadcrumb';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 
 /*******************************
