--- a/files/frontend/semantic/src/definitions/collections/table.less
+++ b/files/frontend/semantic/src/definitions/collections/table.less
@@ -16,7 +16,7 @@
 @type    : 'collection';
 @element : 'table';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
              Table
