--- a/files/frontend/semantic/src/definitions/elements/label.less
+++ b/files/frontend/semantic/src/definitions/elements/label.less
@@ -16,7 +16,7 @@
 @type    : 'element';
 @element : 'label';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Label
