--- a/files/frontend/semantic/src/definitions/elements/list.less
+++ b/files/frontend/semantic/src/definitions/elements/list.less
@@ -15,7 +15,7 @@
 @type    : 'element';
 @element : 'list';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             List
