--- a/files/frontend/semantic/src/definitions/elements/loader.less
+++ b/files/frontend/semantic/src/definitions/elements/loader.less
@@ -14,7 +14,7 @@
 @type    : 'element';
 @element : 'loader';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Loader
