--- a/files/frontend/semantic/src/definitions/globals/reset.less
+++ b/files/frontend/semantic/src/definitions/globals/reset.less
@@ -15,7 +15,7 @@
 @type    : 'global';
 @element : 'reset';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
              Reset
