--- a/files/frontend/semantic/src/definitions/globals/site.less
+++ b/files/frontend/semantic/src/definitions/globals/site.less
@@ -16,7 +16,7 @@
 @type    : 'global';
 @element : 'site';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
              Page
