--- a/files/frontend/semantic/src/definitions/modules/accordion.less
+++ b/files/frontend/semantic/src/definitions/modules/accordion.less
@@ -15,7 +15,7 @@
 @type    : 'module';
 @element : 'accordion';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Accordion
