--- a/files/frontend/semantic/src/definitions/views/ad.less
+++ b/files/frontend/semantic/src/definitions/views/ad.less
@@ -16,7 +16,7 @@
 @type    : 'view';
 @element : 'ad';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
          Advertisement
