--- a/files/frontend/semantic/src/definitions/collections/form.less
+++ b/files/frontend/semantic/src/definitions/collections/form.less
@@ -15,7 +15,7 @@
 @type    : 'collection';
 @element : 'form';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Elements
