--- a/files/frontend/semantic/src/definitions/collections/menu.less
+++ b/files/frontend/semantic/src/definitions/collections/menu.less
@@ -17,7 +17,7 @@
 @type    : 'collection';
 @element : 'menu';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Standard
