--- a/files/frontend/semantic/src/definitions/collections/message.less
+++ b/files/frontend/semantic/src/definitions/collections/message.less
@@ -15,7 +15,7 @@
 @type    : 'collection';
 @element : 'message';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Message
