--- a/files/frontend/semantic/src/definitions/elements/image.less
+++ b/files/frontend/semantic/src/definitions/elements/image.less
@@ -16,7 +16,7 @@
 @type    : 'element';
 @element : 'image';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 
 /*******************************
