--- a/files/frontend/semantic/src/definitions/elements/placeholder.less
+++ b/files/frontend/semantic/src/definitions/elements/placeholder.less
@@ -14,7 +14,7 @@
 @type    : 'element';
 @element : 'placeholder';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*-------------------
       Content
