--- a/files/frontend/semantic/src/definitions/elements/step.less
+++ b/files/frontend/semantic/src/definitions/elements/step.less
@@ -20,7 +20,7 @@
 @type    : 'element';
 @element : 'step';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Plural
