--- a/files/frontend/semantic/src/definitions/elements/text.less
+++ b/files/frontend/semantic/src/definitions/elements/text.less
@@ -16,7 +16,7 @@
 @type    : 'element';
 @element : 'text';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 
 /*******************************
