--- a/files/frontend/semantic/src/definitions/modules/checkbox.less
+++ b/files/frontend/semantic/src/definitions/modules/checkbox.less
@@ -15,7 +15,7 @@
 @type    : 'module';
 @element : 'checkbox';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
            Checkbox
