--- a/files/frontend/semantic/src/definitions/modules/dimmer.less
+++ b/files/frontend/semantic/src/definitions/modules/dimmer.less
@@ -15,7 +15,7 @@
 @type    : 'module';
 @element : 'dimmer';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Dimmer
