--- a/files/frontend/semantic/src/definitions/modules/embed.less
+++ b/files/frontend/semantic/src/definitions/modules/embed.less
@@ -16,7 +16,7 @@
 @type    : 'module';
 @element : 'embed';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
             Types
