--- a/files/frontend/semantic/src/definitions/modules/shape.less
+++ b/files/frontend/semantic/src/definitions/modules/shape.less
@@ -17,7 +17,7 @@
 @type    : 'module';
 @element : 'shape';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
               Shape
