--- a/files/frontend/semantic/src/definitions/modules/slider.less
+++ b/files/frontend/semantic/src/definitions/modules/slider.less
@@ -5,7 +5,7 @@
 @type    : 'module';
 @element : 'slider';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 .ui.slider:not(.vertical):not(.checkbox) {
   width: 100%;
