--- a/files/frontend/semantic/src/definitions/modules/tab.less
+++ b/files/frontend/semantic/src/definitions/modules/tab.less
@@ -16,7 +16,7 @@
 @type    : 'module';
 @element : 'tab';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
            UI Tabs
