--- a/files/frontend/semantic/src/definitions/views/feed.less
+++ b/files/frontend/semantic/src/definitions/views/feed.less
@@ -15,7 +15,7 @@
 @type    : 'view';
 @element : 'feed';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
          Activity Feed
