--- a/files/frontend/semantic/src/definitions/views/statistic.less
+++ b/files/frontend/semantic/src/definitions/views/statistic.less
@@ -15,7 +15,7 @@
 @type    : 'view';
 @element : 'statistic';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
            Statistic
