--- a/files/frontend/semantic/src/semantic.less
+++ b/files/frontend/semantic/src/semantic.less
@@ -11,62 +11,62 @@
 */
 
 /* Global */
-& { @import "semantic/src/definitions/globals/reset"; }
-& { @import "semantic/src/definitions/globals/site"; }
+& { @import "definitions/globals/reset"; }
+& { @import "definitions/globals/site"; }
 
 /* Elements */
-& { @import "semantic/src/definitions/elements/button"; }
-& { @import "semantic/src/definitions/elements/container"; }
-& { @import "semantic/src/definitions/elements/divider"; }
-& { @import "semantic/src/definitions/elements/emoji"; }
-& { @import "semantic/src/definitions/elements/flag"; }
-& { @import "semantic/src/definitions/elements/header"; }
-& { @import "semantic/src/definitions/elements/icon"; }
-& { @import "semantic/src/definitions/elements/image"; }
-& { @import "semantic/src/definitions/elements/input"; }
-& { @import "semantic/src/definitions/elements/label"; }
-& { @import "semantic/src/definitions/elements/list"; }
-& { @import "semantic/src/definitions/elements/loader"; }
-& { @import "semantic/src/definitions/elements/placeholder"; }
-& { @import "semantic/src/definitions/elements/rail"; }
-& { @import "semantic/src/definitions/elements/reveal"; }
-& { @import "semantic/src/definitions/elements/segment"; }
-& { @import "semantic/src/definitions/elements/step"; }
-& { @import "semantic/src/definitions/elements/text"; }
+& { @import "definitions/elements/button"; }
+& { @import "definitions/elements/container"; }
+& { @import "definitions/elements/divider"; }
+& { @import "definitions/elements/emoji"; }
+& { @import "definitions/elements/flag"; }
+& { @import "definitions/elements/header"; }
+& { @import "definitions/elements/icon"; }
+& { @import "definitions/elements/image"; }
+& { @import "definitions/elements/input"; }
+& { @import "definitions/elements/label"; }
+& { @import "definitions/elements/list"; }
+& { @import "definitions/elements/loader"; }
+& { @import "definitions/elements/placeholder"; }
+& { @import "definitions/elements/rail"; }
+& { @import "definitions/elements/reveal"; }
+& { @import "definitions/elements/segment"; }
+& { @import "definitions/elements/step"; }
+& { @import "definitions/elements/text"; }
 
 /* Collections */
-& { @import "semantic/src/definitions/collections/breadcrumb"; }
-& { @import "semantic/src/definitions/collections/form"; }
-& { @import "semantic/src/definitions/collections/grid"; }
-& { @import "semantic/src/definitions/collections/menu"; }
-& { @import "semantic/src/definitions/collections/message"; }
-& { @import "semantic/src/definitions/collections/table"; }
+& { @import "definitions/collections/breadcrumb"; }
+& { @import "definitions/collections/form"; }
+& { @import "definitions/collections/grid"; }
+& { @import "definitions/collections/menu"; }
+& { @import "definitions/collections/message"; }
+& { @import "definitions/collections/table"; }
 
 /* Views */
-& { @import "semantic/src/definitions/views/ad"; }
-& { @import "semantic/src/definitions/views/card"; }
-& { @import "semantic/src/definitions/views/comment"; }
-& { @import "semantic/src/definitions/views/feed"; }
-& { @import "semantic/src/definitions/views/item"; }
-& { @import "semantic/src/definitions/views/statistic"; }
+& { @import "definitions/views/ad"; }
+& { @import "definitions/views/card"; }
+& { @import "definitions/views/comment"; }
+& { @import "definitions/views/feed"; }
+& { @import "definitions/views/item"; }
+& { @import "definitions/views/statistic"; }
 
 /* Modules */
-& { @import "semantic/src/definitions/modules/accordion"; }
-& { @import "semantic/src/definitions/modules/calendar"; }
-& { @import "semantic/src/definitions/modules/checkbox"; }
-& { @import "semantic/src/definitions/modules/dimmer"; }
-& { @import "semantic/src/definitions/modules/dropdown"; }
-& { @import "semantic/src/definitions/modules/embed"; }
-& { @import "semantic/src/definitions/modules/modal"; }
-& { @import "semantic/src/definitions/modules/nag"; }
-& { @import "semantic/src/definitions/modules/popup"; }
-& { @import "semantic/src/definitions/modules/progress"; }
-& { @import "semantic/src/definitions/modules/slider"; }
-& { @import "semantic/src/definitions/modules/rating"; }
-& { @import "semantic/src/definitions/modules/search"; }
-& { @import "semantic/src/definitions/modules/shape"; }
-& { @import "semantic/src/definitions/modules/sidebar"; }
-& { @import "semantic/src/definitions/modules/sticky"; }
-& { @import "semantic/src/definitions/modules/tab"; }
-& { @import "semantic/src/definitions/modules/toast"; }
-& { @import "semantic/src/definitions/modules/transition"; }
+& { @import "definitions/modules/accordion"; }
+& { @import "definitions/modules/calendar"; }
+& { @import "definitions/modules/checkbox"; }
+& { @import "definitions/modules/dimmer"; }
+& { @import "definitions/modules/dropdown"; }
+& { @import "definitions/modules/embed"; }
+& { @import "definitions/modules/modal"; }
+& { @import "definitions/modules/nag"; }
+& { @import "definitions/modules/popup"; }
+& { @import "definitions/modules/progress"; }
+& { @import "definitions/modules/slider"; }
+& { @import "definitions/modules/rating"; }
+& { @import "definitions/modules/search"; }
+& { @import "definitions/modules/shape"; }
+& { @import "definitions/modules/sidebar"; }
+& { @import "definitions/modules/sticky"; }
+& { @import "definitions/modules/tab"; }
+& { @import "definitions/modules/toast"; }
+& { @import "definitions/modules/transition"; }
