ERMS-4349: New Order for the Fomantic Building Process

--- a/files/frontend/semantic/src/definitions/modules/rating.less
+++ b/files/frontend/semantic/src/definitions/modules/rating.less
@@ -16,7 +16,7 @@
 @type    : 'module';
 @element : 'rating';
 
-@import (multiple) 'semantic/src/theme.config';
+@import (multiple) '../../theme.config';
 
 /*******************************
            Rating
