--- a/server/gokbg3/grails-app/assets/stylesheets/wekb.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/wekb.css
@@ -99,9 +99,9 @@
     word-wrap: break-word;
 }
 body {
-    display: flex;
+/*    display: flex;
     min-height: 100vh;
-    flex-direction: column;
+    flex-direction: column;*/
 }
 main {
     flex:1;
