ERMS-4357 nicer footer

--- a/server/gokbg3/grails-app/assets/semantic/semantic.css
+++ b/server/gokbg3/grails-app/assets/semantic/semantic.css
@@ -39958,6 +39958,14 @@ ol.ui.suffixed.list li:before,
 /*******************************
          Theme Overrides
 *******************************/
+
+/*******************************
+         Theme Overrides
+*******************************/
+
+.ui.segment.footer.wekb-footer {
+  padding: 40px;
+}
 /*!
  * # Fomantic-UI 2.8.8 - Step
  * http://github.com/fomantic/Fomantic-UI/
