ERMS-4371 temp solution with jquery ui as a datepicker

--- a/server/gokbg3/grails-app/assets/stylesheets/wekb.css
+++ b/server/gokbg3/grails-app/assets/stylesheets/wekb.css
@@ -3,7 +3,13 @@
  *
  *= require /semantic.min.css         //-- semantic
 
- *= require /jquery-editable/css/jquery-editable.css //-- externalLibs
+ *= require /jquery-ui.min.css
+
+ *= require / jquery-ui.structure.min.css
+
+ *= require / jquery-ui.theme.min.css
+
+ *= require /jquery-editable.css //-- externalLibs
 
  *= require security-styles
 
@@ -11,6 +17,13 @@
  */
 
 /* label what server */
+
+/* temp solution datepicker */
+.ui-datepicker-trigger {
+    height: 15px;
+    margin-top: 10px;
+    margin-left: -25px;
+}
 
 .wb-server-label {
     position: fixed;
